logger/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-volume
          emptyDir: {}
        - name: conf-vol
          configMap:
            name: log-map
            items:
            - key: "information.txt"
              path: "information.txt"

      containers:
        - name: log-writer
          image: heclll/log-writer:1.3
          volumeMounts:
            - name: log-volume
              mountPath: /usr/src/app/files
            - name: conf-vol
              mountPath: /usr/src/app/conf

        - name: log-getter
          image: heclll/log-getter:0.8
          volumeMounts:
            - name: log-volume
              mountPath: /usr/src/app/files
