logger/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 2345
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-app-svc
      port: 3456
